--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
 	"scripts": {
 		"dev": "webpack-dev-server --config webpack.dev.js --open --mode development",
 		"prod": "webpack --config webpack.prod.js --mode production --display-error-details",
-		"figmagic": "yarn figmagic:clean && yarn run figmagic:savefromapi && yarn figmagic:build && yarn figmagic:getimages && yarn figmagic:downloadimages",
+		"figmagic": "yarn figmagic:clean && yarn run figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
 		"figmagic:clean": "rm -rf specs/ && rm -rf tokens/ && rm -rf figma",
-		"figmagic:savefromapi": "mkdir -p figma && wget 'https://api.figma.com/v1/files/{FILE}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
-		"figmagic:tokens": "yarn figmagic:clean && yarn figmagic:savefromapi && yarn figmagic:build",
+		"figmagic:saveFromApi": "mkdir -p figma && wget 'https://api.figma.com/v1/files/{FILE}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
+		"figmagic:tokens": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build",
 		"figmagic:build": "node $npm_package_config_figmagicPath/bin/index.js",
-		"figmagic:getimages": "node $npm_package_config_figmagicPath/bin/getImages.js",
-		"figmagic:downloadimages": "node $npm_package_config_figmagicPath/bin/downloadImages.js"
+		"figmagic:getImages": "node $npm_package_config_figmagicPath/bin/getImages.js",
+		"figmagic:downloadImages": "node $npm_package_config_figmagicPath/bin/downloadImages.js"
 	}
 }
