--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"clean-webpack-plugin": "^0.1.19",
 		"css-loader": "^0.28.11",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"figmagic": "^0.2.0",
+		"figmagic": "^0.2.1",
 		"file-loader": "^1.1.11",
 		"html-webpack-plugin": "^3.0.7",
 		"raw-loader": "^0.5.1",
@@ -38,9 +38,11 @@
 	"scripts": {
 		"dev": "webpack-dev-server --config webpack.dev.js --open --mode development",
 		"prod": "webpack --config webpack.prod.js --mode production --display-error-details",
-		"figmagic": "yarn figmagic:clean && yarn run figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
+		"figmagic":
+			"yarn figmagic:clean && yarn run figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
 		"figmagic:clean": "rm -rf specs/ && rm -rf tokens/ && rm -rf figma",
-		"figmagic:saveFromApi": "mkdir -p figma && wget 'https://api.figma.com/v1/files/KLLDK9CBSg7eAayiTY3kVqC8' --header='X-Figma-Token: 663-9bd30914-59d1-4741-b476-375357a69f2d' -O figma/figma.json",
+		"figmagic:saveFromApi":
+			"mkdir -p figma && wget 'https://api.figma.com/v1/files/{FILE}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
 		"figmagic:tokens": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build",
 		"figmagic:build": "node $npm_package_config_figmagicPath/bin/index.js",
 		"figmagic:getImages": "node $npm_package_config_figmagicPath/bin/getImages.js",
