--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 			"yarn figmagic:clean && yarn run figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
 		"figmagic:clean": "rm -rf specs/ && rm -rf tokens/ && rm -rf figma",
 		"figmagic:saveFromApi":
-			"mkdir -p figma && wget 'https://api.figma.com/v1/files/{FILE}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
+			"mkdir -p figma && wget 'https://api.figma.com/v1/files/KLLDK9CBSg7eAayiTY3kVqC8' --header='X-Figma-Token: 667-b8e19e6b-ca5f-4322-94aa-562a3684dba3' -O figma/figma.json",
 		"figmagic:tokens": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build",
 		"figmagic:build": "node $npm_package_config_figmagicPath/bin/index.js",
 		"figmagic:getImages": "node $npm_package_config_figmagicPath/bin/getImages.js",
