--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
 		[
 			"module-resolver",
 			{
-				"root": ["./"]
+				"root": ["./", "./src"]
 			}
 		]
 	],
@@ -15,6 +15,11 @@
 			}
 		],
 		"@babel/preset-react",
-		"@babel/preset-stage-0"
+		[
+			"@babel/preset-stage-0",
+			{
+				"decoratorsLegacy": true
+			}
+		]
 	]
 }
