--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
-		"@babel/cli": "^7.0.0-beta.44",
-		"@babel/core": "^7.0.0-beta.44",
-		"@babel/preset-env": "^7.0.0-beta.44",
-		"@babel/preset-react": "^7.0.0-beta.44",
-		"@babel/preset-stage-0": "^7.0.0-beta.44",
+		"@babel/cli": "^7.0.0-beta.51",
+		"@babel/core": "^7.0.0-beta.51",
+		"@babel/preset-env": "^7.0.0-beta.51",
+		"@babel/preset-react": "^7.0.0-beta.51",
+		"@babel/preset-stage-0": "^7.0.0-beta.51",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-loader": "^8.0.0-beta.2",
 		"babel-plugin-module-resolver": "^3.1.1",
@@ -17,20 +17,20 @@
 		"clean-webpack-plugin": "^0.1.19",
 		"css-loader": "^0.28.11",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"figmagic": "^0.4.3",
+		"figmagic": "^0.4.5",
 		"file-loader": "^1.1.11",
-		"html-webpack-plugin": "^3.0.7",
+		"html-webpack-plugin": "^3.2.0",
 		"raw-loader": "^0.5.1",
-		"react": "^16.3.0",
-		"react-dom": "^16.3.0",
-		"request": "^2.85.0",
+		"react": "^16.4.1",
+		"react-dom": "^16.4.1",
+		"request": "^2.87.0",
 		"script-ext-html-webpack-plugin": "^2.0.1",
-		"style-loader": "^0.20.3",
-		"styled-components": "^3.2.5",
-		"webpack": "^4.1.1",
-		"webpack-cli": "^2.0.12",
-		"webpack-dev-server": "^3.1.1",
-		"webpack-merge": "^4.1.2"
+		"style-loader": "^0.21.0",
+		"styled-components": "^3.3.3",
+		"webpack": "^4.14.0",
+		"webpack-cli": "3.0.8",
+		"webpack-dev-server": "^3.1.4",
+		"webpack-merge": "^4.1.3"
 	},
 	"config": {
 		"figmagicPath": "node_modules/figmagic"
@@ -38,17 +38,12 @@
 	"scripts": {
 		"dev": "webpack-dev-server --config webpack.dev.js --open --mode development",
 		"prod": "webpack --config webpack.prod.js --mode production --display-error-details",
-		"figmagic":
-			"yarn figmagic:clean && yarn run figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
-		"figmagic:clean":
-			"rm -rf specs/ && rm -rf tokens/ && rm -rf figma && mkdir tokens && cp $npm_package_config_figmagicPath/.gridTemplate.mjs tokens/ && mv tokens/.gridTemplate.mjs tokens/grid.mjs",
-		"figmagic:saveFromApi":
-			"mkdir -p figma && wget 'https://api.figma.com/v1/files/{URL}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
+		"figmagic": "yarn figmagic:clean && yarn run figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
+		"figmagic:clean": "rm -rf specs/ && rm -rf tokens/ && rm -rf figma && mkdir tokens && cp $npm_package_config_figmagicPath/.gridTemplate.mjs tokens/ && mv tokens/.gridTemplate.mjs tokens/grid.mjs",
+		"figmagic:saveFromApi": "mkdir -p figma && wget 'https://api.figma.com/v1/files/{URL}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
 		"figmagic:tokens": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build",
 		"figmagic:build": "node --experimental-modules $npm_package_config_figmagicPath/bin/index.mjs",
-		"figmagic:getImages":
-			"node --experimental-modules $npm_package_config_figmagicPath/bin/getImages.mjs",
-		"figmagic:downloadImages":
-			"node --experimental-modules $npm_package_config_figmagicPath/bin/downloadImages.mjs"
+		"figmagic:getImages": "node --experimental-modules $npm_package_config_figmagicPath/bin/getImages.mjs",
+		"figmagic:downloadImages": "node --experimental-modules $npm_package_config_figmagicPath/bin/downloadImages.mjs"
 	}
 }
