--- a/.babelrc
+++ b/.babelrc
@@ -14,12 +14,6 @@
 				"modules": false
 			}
 		],
-		"@babel/preset-react",
-		[
-			"@babel/preset-stage-0",
-			{
-				"decoratorsLegacy": true
-			}
-		]
+		"@babel/preset-react"
 	]
 }
