* Remove unnecessary $ character from script command * Update Figmagic dep

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"clean-webpack-plugin": "^0.1.19",
 		"css-loader": "^1.0.0",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"figmagic": "^0.6.2",
+		"figmagic": "^0.6.3",
 		"file-loader": "^1.1.11",
 		"html-webpack-plugin": "^3.2.0",
 		"raw-loader": "^0.5.1",
@@ -39,7 +39,7 @@
 		"prod": "webpack --config webpack.prod.js --mode production --display-error-details",
 		"figmagic": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
 		"figmagic:clean": "rm -rf specs/ && rm -rf tokens/ && rm -rf grid/ && rm -rf figma && mkdir tokens && cp $npm_package_config_figmagicPath/.gridTemplate.mjs tokens/ && mv tokens/.gridTemplate.mjs tokens/grid.mjs",
-		"figmagic:saveFromApi": "mkdir -p figma && wget 'https://api.figma.com/v1/files/{URL}' --header='X-Figma-Token: ${TOKEN}' -O figma/figma.json",
+		"figmagic:saveFromApi": "mkdir -p figma && wget 'https://api.figma.com/v1/files/{URL}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
 		"figmagic:tokens": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build",
 		"figmagic:build": "node --experimental-modules $npm_package_config_figmagicPath/bin/index.mjs",
 		"figmagic:getImages": "node --experimental-modules $npm_package_config_figmagicPath/bin/getImages.mjs",
