--- a/package.json
+++ b/package.json
@@ -1,51 +1,48 @@
 {
 	"name": "figmagic-example",
-	"version": "0.1.1",
-	"author": "Mikael Vesavuori",
-	"main": "index.js",
+	"main": "index.jsx",
 	"license": "MIT",
+	"author": "",
+	"version": "0.0.1",
 	"dependencies": {
-		"@babel/cli": "^7.0.0-beta.55",
-		"@babel/core": "^7.0.0-beta.55",
-		"@babel/preset-env": "^7.0.0-beta.55",
-		"@babel/preset-react": "^7.0.0-beta.55",
-		"babel-core": "7.0.0-bridge.0",
-		"babel-loader": "^8.0.0-beta.2",
-		"babel-plugin-module-resolver": "^3.1.1",
-		"babel-plugin-styled-components": "^1.5.1",
-		"clean-webpack-plugin": "^0.1.19",
-		"css-loader": "^1.0.0",
-		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"figmagic": "^0.6.3",
-		"file-loader": "^1.1.11",
-		"html-webpack-plugin": "^3.2.0",
-		"raw-loader": "^0.5.1",
-		"react": "^16.4.1",
-		"react-dom": "^16.4.1",
-		"request": "^2.87.0",
-		"script-ext-html-webpack-plugin": "^2.0.1",
-		"style-loader": "^0.21.0",
-		"styled-components": "^3.3.3",
-		"webpack": "^4.16.3",
-		"webpack-cli": "3.1.0",
-		"webpack-dev-server": "^3.1.5",
-		"webpack-merge": "^4.1.3"
+		"react": "^16.8.1",
+		"react-dom": "^16.8.1",
+		"react-helmet": "^5.2.0",
+		"react-loadable": "^5.5.0",
+		"react-router": "^4.3.1",
+		"react-router-dom": "^4.3.1"
 	},
-	"config": {
-		"figmagicPath": "node_modules/figmagic"
+	"devDependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.2.2",
+		"@babel/plugin-proposal-class-properties": "^7.3.0",
+		"@babel/plugin-syntax-class-properties": "^7.2.0",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"@babel/preset-env": "^7.3.1",
+		"@babel/preset-react": "^7.0.0",
+		"babel-core": "7.0.0-bridge.0",
+		"babel-loader": "^8.0.5",
+		"babel-plugin-module-resolver": "^3.1.3",
+		"babel-plugin-styled-components": "^1.10.0",
+		"babel-runtime": "^6.26.0",
+		"clean-webpack-plugin": "^1.0.1",
+		"copy-webpack-plugin": "^4.6.0",
+		"extract-text-webpack-plugin": "^4.0.0-beta",
+		"file-loader": "^3.0.1",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"path": "^0.12.7",
+		"prop-types": "^15.6.2",
+		"script-ext-html-webpack-plugin": "^2.1.3",
+		"styled-components": "^4.1.3",
+		"webpack": "^4.29.3",
+		"webpack-cli": "^3.2.3",
+		"webpack-dev-server": "^3.1.14",
+		"webpack-merge": "^4.2.1",
+		"workbox-webpack-plugin": "^3.6.3"
 	},
 	"scripts": {
-		"dev": "webpack-dev-server --config webpack.dev.js --open --mode development",
-		"prod": "webpack --config webpack.prod.js --mode production --display-error-details",
-		"figmagic": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build && yarn figmagic:getImages && yarn figmagic:downloadImages",
-		"figmagic:clean": "rm -rf specs/ && rm -rf tokens/ && rm -rf grid/ && rm -rf figma && mkdir tokens && cp $npm_package_config_figmagicPath/.gridTemplate.mjs tokens/ && mv tokens/.gridTemplate.mjs tokens/grid.mjs",
-		"figmagic:saveFromApi": "mkdir -p figma && wget 'https://api.figma.com/v1/files/{URL}' --header='X-Figma-Token: {TOKEN}' -O figma/figma.json",
-		"figmagic:tokens": "yarn figmagic:clean && yarn figmagic:saveFromApi && yarn figmagic:build",
-		"figmagic:build": "node --experimental-modules $npm_package_config_figmagicPath/bin/index.mjs",
-		"figmagic:getImages": "node --experimental-modules $npm_package_config_figmagicPath/bin/getImages.mjs",
-		"figmagic:getGraphics": "node --experimental-modules $npm_package_config_figmagicPath/bin/getImages.mjs --graphics",
-		"figmagic:downloadImages": "node --experimental-modules $npm_package_config_figmagicPath/bin/downloadImages.mjs",
-		"figmagic:downloadGraphics": "node --experimental-modules $npm_package_config_figmagicPath/bin/downloadImages.mjs --graphics",
-		"figmagic:optimizeGraphics": "svgo -f ./specs/graphics/ --multipass --disable=removeViewBox --enable=removeDimensions"
+		"start": "webpack-dev-server --config webpack.dev.js --open --mode development",
+		"build": "webpack --config webpack.prod.js --mode production"
 	}
 }
