--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
 	"name": "figmagic-example",
-	"main": "index.jsx",
+	"module": "index.jsx",
 	"license": "MIT",
 	"author": "",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"dependencies": {
-		"react": "^16.8.1",
-		"react-dom": "^16.8.1",
-		"react-helmet": "^5.2.0",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-helmet": "^5.2.1",
 		"react-loadable": "^5.5.0",
-		"react-router": "^4.3.1",
-		"react-router-dom": "^4.3.1"
+		"react-router": "^5.1.2",
+		"react-router-dom": "^5.1.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.2.2",
-		"@babel/plugin-proposal-class-properties": "^7.3.0",
-		"@babel/plugin-syntax-class-properties": "^7.2.0",
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"@babel/preset-env": "^7.3.1",
-		"@babel/preset-react": "^7.0.0",
+		"@babel/cli": "^7.7.7",
+		"@babel/core": "^7.7.7",
+		"@babel/plugin-proposal-class-properties": "^7.7.4",
+		"@babel/plugin-syntax-class-properties": "^7.7.4",
+		"@babel/plugin-syntax-dynamic-import": "^7.7.4",
+		"@babel/preset-env": "^7.7.7",
+		"@babel/preset-react": "^7.7.4",
 		"babel-core": "7.0.0-bridge.0",
-		"babel-loader": "^8.0.5",
-		"babel-plugin-module-resolver": "^3.1.3",
-		"babel-plugin-styled-components": "^1.10.0",
+		"babel-loader": "^8.0.6",
+		"babel-plugin-module-resolver": "^4.0.0",
+		"babel-plugin-styled-components": "^1.10.6",
 		"babel-runtime": "^6.26.0",
-		"clean-webpack-plugin": "^1.0.1",
-		"copy-webpack-plugin": "^4.6.0",
+		"clean-webpack-plugin": "^3.0.0",
+		"copy-webpack-plugin": "^5.1.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta",
-		"file-loader": "^3.0.1",
+		"file-loader": "^5.0.2",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
 		"path": "^0.12.7",
-		"prop-types": "^15.6.2",
-		"script-ext-html-webpack-plugin": "^2.1.3",
-		"styled-components": "^4.1.3",
-		"webpack": "^4.29.3",
-		"webpack-cli": "^3.2.3",
-		"webpack-dev-server": "^3.1.14",
-		"webpack-merge": "^4.2.1",
-		"workbox-webpack-plugin": "^3.6.3"
+		"prop-types": "^15.7.2",
+		"script-ext-html-webpack-plugin": "^2.1.4",
+		"styled-components": "^4.4.1",
+		"webpack": "^4.41.5",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.1",
+		"webpack-merge": "^4.2.2",
+		"workbox-webpack-plugin": "^4.3.1"
 	},
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --open --mode development",
