--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
 	"name": "figmagic-example",
-	"module": "index.jsx",
+	"description": "Example of Figmagic, which automates the generation of design tokens from your Figma documents.",
+	"keywords": [
+		"figma",
+		"figma api",
+		"design tokens",
+		"tokens",
+		"design system",
+		"salesforce theo"
+	],
+	"homepage": "https://www.figmagic.com",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mikaelvesavuori/figmagic-example.git"
+	},
+	"version": "2.0.0",
+	"author": "Mikael Vesavuori",
+	"module": "src/index.jsx",
 	"license": "MIT",
-	"author": "",
-	"version": "0.0.2",
 	"dependencies": {
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
@@ -13,36 +27,38 @@
 		"react-router-dom": "^5.1.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.7.7",
-		"@babel/core": "^7.7.7",
-		"@babel/plugin-proposal-class-properties": "^7.7.4",
-		"@babel/plugin-syntax-class-properties": "^7.7.4",
-		"@babel/plugin-syntax-dynamic-import": "^7.7.4",
-		"@babel/preset-env": "^7.7.7",
-		"@babel/preset-react": "^7.7.4",
+		"@babel/cli": "^7.8.4",
+		"@babel/core": "^7.8.4",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-syntax-class-properties": "^7.8.3",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"@babel/preset-env": "^7.8.4",
+		"@babel/preset-react": "^7.8.3",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-loader": "^8.0.6",
 		"babel-plugin-module-resolver": "^4.0.0",
-		"babel-plugin-styled-components": "^1.10.6",
+		"babel-plugin-styled-components": "^1.10.7",
 		"babel-runtime": "^6.26.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.1.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta",
-		"file-loader": "^5.0.2",
+		"figmagic": "^2.0.0",
+		"file-loader": "^5.1.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
 		"path": "^0.12.7",
 		"prop-types": "^15.7.2",
 		"script-ext-html-webpack-plugin": "^2.1.4",
 		"styled-components": "^4.4.1",
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.10.1",
+		"webpack": "^4.41.6",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3",
 		"webpack-merge": "^4.2.2",
 		"workbox-webpack-plugin": "^4.3.1"
 	},
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --open --mode development",
-		"build": "webpack --config webpack.prod.js --mode production"
+		"build": "webpack --config webpack.prod.js --mode production",
+		"figmagic": "./node_modules/figmagic/index.mjs"
 	}
 }
