--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
 				"modules": false,
 				"loose": true,
 				"useBuiltIns": "usage",
+				"corejs": 3,
 				"targets": {
 					"browsers": [">0.25%", "ie 11", "not op_mini all"]
 				}
