--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
 		"type": "git",
 		"url": "https://github.com/mikaelvesavuori/figmagic-example.git"
 	},
-	"version": "2.0.0",
+	"version": "2.1.1",
 	"author": "Mikael Vesavuori",
 	"module": "src/index.jsx",
 	"license": "MIT",
 	"dependencies": {
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
+		"core-js": "3",
+		"react": "^16.13.0",
+		"react-dom": "^16.13.0",
 		"react-helmet": "^5.2.1",
 		"react-loadable": "^5.5.0",
 		"react-router": "^5.1.2",
@@ -28,11 +29,11 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.8.4",
-		"@babel/core": "^7.8.4",
+		"@babel/core": "^7.8.7",
 		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/plugin-syntax-class-properties": "^7.8.3",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/preset-env": "^7.8.4",
+		"@babel/preset-env": "^7.8.7",
 		"@babel/preset-react": "^7.8.3",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-loader": "^8.0.6",
@@ -42,19 +43,19 @@
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.1.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta",
-		"figmagic": "^2.0.0",
+		"figmagic": "^2.1.1",
 		"file-loader": "^5.1.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
 		"path": "^0.12.7",
 		"prop-types": "^15.7.2",
 		"script-ext-html-webpack-plugin": "^2.1.4",
-		"styled-components": "^4.4.1",
-		"webpack": "^4.41.6",
+		"styled-components": "^5.0.1",
+		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.11",
 		"webpack-dev-server": "^3.10.3",
 		"webpack-merge": "^4.2.2",
-		"workbox-webpack-plugin": "^4.3.1"
+		"workbox-webpack-plugin": "^5.0.0"
 	},
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --open --mode development",
