--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"type": "git",
 		"url": "https://github.com/mikaelvesavuori/figmagic-example.git"
 	},
-	"version": "2.1.1",
+	"version": "2.1.13",
 	"author": "Mikael Vesavuori",
 	"module": "src/index.jsx",
 	"license": "MIT",
@@ -43,7 +43,7 @@
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.1.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta",
-		"figmagic": "^2.1.1",
+		"figmagic": "^2.1.13",
 		"file-loader": "^5.1.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
@@ -60,6 +60,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --open --mode development",
 		"build": "webpack --config webpack.prod.js --mode production",
-		"figmagic": "./node_modules/figmagic/index.mjs"
+		"figmagic": "node --experimental-modules ./node_modules/figmagic/index.mjs",
+		"figmagic:graphics": "node --experimental-modules ./node_modules/figmagic/index.mjs --syncGraphics"
 	}
 }
