--- a/package.json
+++ b/package.json
@@ -17,36 +17,36 @@
 		"type": "git",
 		"url": "https://github.com/mikaelvesavuori/figmagic-example.git"
 	},
-	"version": "4.0.0-alpha",
+	"version": "4.0.0-beta",
 	"author": "Mikael Vesavuori",
 	"module": "src/index.jsx",
 	"license": "MIT",
 	"dependencies": {
 		"core-js": "3",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"react": "^16.4.0",
+		"react-dom": "^16.14.0",
 		"react-helmet": "^6.1.0",
 		"react-loadable": "^5.5.0",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.11.6",
-		"@babel/core": "^7.11.6",
-		"@babel/plugin-proposal-class-properties": "^7.10.4",
-		"@babel/plugin-syntax-class-properties": "^7.10.4",
+		"@babel/cli": "^7.12.1",
+		"@babel/core": "^7.12.1",
+		"@babel/plugin-proposal-class-properties": "^7.12.1",
+		"@babel/plugin-syntax-class-properties": "^7.12.1",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/preset-env": "^7.11.5",
-		"@babel/preset-react": "^7.10.4",
+		"@babel/preset-env": "^7.12.1",
+		"@babel/preset-react": "^7.12.1",
 		"@storybook/addon-notes": "^5.3.21",
 		"@storybook/react": "^6.0.26",
-		"@types/react": "^16.9.51",
+		"@types/react": "^16.9.52",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-loadable": "^5.5.3",
 		"@types/react-router-dom": "^5.1.6",
-		"@types/styled-components": "^5.1.3",
-		"@typescript-eslint/eslint-plugin": "^4.4.0",
-		"@typescript-eslint/parser": "^4.4.0",
+		"@types/styled-components": "^5.1.4",
+		"@typescript-eslint/eslint-plugin": "^4.4.1",
+		"@typescript-eslint/parser": "^4.4.1",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-module-resolver": "^4.0.0",
@@ -58,7 +58,7 @@
 		"eslint-config-prettier": "^6.12.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"extract-text-webpack-plugin": "^4.0.0-beta",
-		"figmagic": "^4.0.0-alpha.2",
+		"figmagic": "^4.0.0-beta",
 		"file-loader": "^6.1.1",
 		"html-loader": "^1.3.2",
 		"html-webpack-plugin": "^4.5.0",
@@ -67,12 +67,12 @@
 		"prop-types": "^15.7.2",
 		"script-ext-html-webpack-plugin": "^2.1.4",
 		"styled-components": "^5.2.0",
-		"ts-loader": "^8.0.4",
+		"ts-loader": "^8.0.5",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.1.4",
+		"webpack-merge": "^5.2.0",
 		"workbox-webpack-plugin": "^5.1.4"
 	},
 	"scripts": {
