--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"type": "git",
 		"url": "https://github.com/mikaelvesavuori/figmagic-example.git"
 	},
-	"version": "4.0.0-beta",
+	"version": "4.0.0",
 	"author": "Mikael Vesavuori",
 	"module": "src/index.jsx",
 	"license": "MIT",
@@ -58,7 +58,7 @@
 		"eslint-config-prettier": "^6.12.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"extract-text-webpack-plugin": "^4.0.0-beta",
-		"figmagic": "^4.0.0-beta",
+		"figmagic": "^4.0.0",
 		"file-loader": "^6.1.1",
 		"html-loader": "^1.3.2",
 		"html-webpack-plugin": "^4.5.0",
