--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "type": "git",
     "url": "https://github.com/mikaelvesavuori/figmagic-example.git"
   },
-  "version": "4.0.1",
+  "version": "4.0.8",
   "author": "Mikael Vesavuori",
   "module": "src/index.jsx",
   "license": "MIT",
   "dependencies": {
     "core-js": "3",
-    "react": "^16.4.0",
+    "react": "^16.13.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-loadable": "^5.5.0",
@@ -31,53 +31,53 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.1",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-syntax-class-properties": "^7.12.1",
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@storybook/addon-notes": "^5.3.21",
-    "@storybook/react": "^6.0.26",
-    "@types/react": "^16.9.52",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-loadable": "^5.5.3",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "@storybook/react": "^6.1.18",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-loadable": "^5.5.4",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "arkit": "^1.6.4",
     "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-styled-components": "^1.11.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "extract-text-webpack-plugin": "^4.0.0-beta",
-    "figmagic": "^4.0.1",
-    "file-loader": "^6.1.1",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "figmagic": "^4.0.8",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.0.0",
+    "html-webpack-plugin": "^5.1.0",
+    "license-checker-webpack-plugin": "^0.2.1",
     "path": "^0.12.7",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
-    "script-ext-html-webpack-plugin": "^2.1.4",
-    "styled-components": "^5.2.0",
-    "ts-loader": "^8.0.5",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0",
-    "workbox-webpack-plugin": "^5.1.4"
+    "styled-components": "^5.2.1",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3",
+    "workbox-webpack-plugin": "^6.1.0"
   },
   "scripts": {
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.js --open --mode development",
+    "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --mode production",
+    "build-storybook": "build-storybook",
     "figmagic": "node ./node_modules/figmagic/build/index.js",
     "figmagic:graphics": "node ./node_modules/figmagic/build/index.js --syncGraphics",
     "figmagic:elements": "node ./node_modules/figmagic/build/index.js --syncElements",
