--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "sourceMap": true,
     "strict": true
   },
-	"include": ["./src/", "./tokens/"],
+	"include": ["./src/"],
 	"compileOnSave": false
 }
