--- a/package.json
+++ b/package.json
@@ -17,66 +17,66 @@
     "type": "git",
     "url": "https://github.com/mikaelvesavuori/figmagic-example.git"
   },
-  "version": "4.2.1",
+  "version": "4.3.3",
   "author": "Mikael Vesavuori",
   "module": "src/index.jsx",
   "license": "MIT",
   "dependencies": {
     "core-js": "3",
-    "react": "^16.13.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0",
-    "react-loadable": "^5.5.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react": "17",
+    "react-dom": "17",
+    "react-helmet": "6",
+    "react-loadable": "5",
+    "react-router": "5",
+    "react-router-dom": "5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-syntax-class-properties": "^7.12.13",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-react": "^7.13.13",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/builder-webpack5": "^6.2.9",
-    "@storybook/react": "^6.2.9",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "@types/react-loadable": "^5.5.5",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "arkit": "^1.6.4",
+    "@babel/cli": "7",
+    "@babel/core": "7",
+    "@babel/plugin-proposal-class-properties": "7",
+    "@babel/plugin-syntax-class-properties": "7",
+    "@babel/plugin-syntax-dynamic-import": "7",
+    "@babel/preset-env": "7",
+    "@babel/preset-react": "7",
+    "@storybook/addon-actions": "6.3.8",
+    "@storybook/addon-essentials": "6.3.8",
+    "@storybook/addon-links": "6.3.8",
+    "@storybook/builder-webpack5": "6.3.8",
+    "@storybook/react": "6.3.8",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/react-loadable": "latest",
+    "@types/react-router-dom": "latest",
+    "@types/styled-components": "latest",
+    "@typescript-eslint/eslint-plugin": "4",
+    "@typescript-eslint/parser": "4",
+    "arkit": "1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-styled-components": "^1.12.0",
+    "babel-loader": "8",
+    "babel-plugin-module-resolver": "4",
+    "babel-plugin-styled-components": "1",
     "babel-runtime": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^9.0.0",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "figmagic": "^4.2.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
-    "license-checker-webpack-plugin": "^0.2.1",
-    "path": "^0.12.7",
-    "prettier": "^2.3.0",
-    "prop-types": "^15.7.2",
-    "styled-components": "^5.3.0",
-    "ts-loader": "^9.2.2",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3",
-    "workbox-webpack-plugin": "^6.1.5"
+    "clean-webpack-plugin": "4",
+    "copy-webpack-plugin": "9",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest",
+    "figmagic": "4.3.3",
+    "file-loader": "6",
+    "html-loader": "2",
+    "html-webpack-plugin": "5",
+    "license-checker-webpack-plugin": "latest",
+    "path": "latest",
+    "prettier": "latest",
+    "prop-types": "latest",
+    "styled-components": "5",
+    "ts-loader": "9",
+    "typescript": "4",
+    "webpack": "5",
+    "webpack-cli": "4",
+    "webpack-dev-server": "3",
+    "webpack-merge": "5",
+    "workbox-webpack-plugin": "6"
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
